@@ -71,5 +71,6 @@ readonly PROPERTY_PURPOSE="-Djrd.purpose=$PURPOSE"
 "$javac_home"/bin/java -Djdk.attach.allowAttachSelf=true "$PROPERTY_LOCATION" "$PROPERTY_PURPOSE" \
 --add-exports jdk.jdeps/com.sun.tools.javap=ALL-UNNAMED \
 --add-opens   java.base/java.lang=ALL-UNNAMED \
+--add-opens   java.base/java.io=ALL-UNNAMED \
 -cp "$TOOLS:$JRD:$RSYNTAXTEXTAREA:$GSON:$JDIFF:$BYTEMAN:$CPLC_API:$CPLC_UTIL:$CPLC:$ASM_TREE:$ASM_JAR" \
 org.jrd.backend.data.Main "$@"
